Correções resenha Novos Classicos turma C.

--- a/Materias/2S2020/PED_CE342/Turma_C/103034.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/103034.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Em seu parágrafo de abertura, pontuou corretamente os principais elementos da teoria monetarista e a situou como um contraponto à escola keynesiana. Em seguida destacou que a TQM é retomada enquanto uma teoria da demanda por moeda. Poderia ter discutido mais implicações: estabilidade na demanda por moeda. Estes pontos estão no trecho citado, mas seria interessante que tivesse articulado tais ideias com as suas palavras. Adiante, apontou corretamente que a moeda é neutra no longo prazo, mas tem efeitos reais no curto. Adiante, exemplifica corretamente o fenômeno da ilusão monetária e os efeitos de curto prazo da política monetária. Na página seguinte, há um trecho cortado. Apresentou corretamente as formas que podem reduzir a taxa de desemprego (natural) por políticas do lado da oferta. De modo geral, discutiu corretamente os conceito, mas definiu pouco alguns deles (como taxa de desemprego natural). No parágrafo final, listou os pontos resumidos pelos autores mas encadeou pouco tais elementos. Por fim, não discutiu o principal ponto do texto: compreensão do regime de metas monetárias. Sua resenha esta boa, mas parece que esta supondo que o leitor conhece o texto que esta sendo resenhado. Isso é verdade na disciplina, mas costuma não ser o caso em outras situações.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
