--- a/Materias/2S2020/PED_CE342/Turma_C/159866.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/159866.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 O conceito de taxa natural de desemprego é corretamente apresentado. Poderia apenas ter mencionado que esta associados a fatores institucionais da economia. Adiante, é dito que a ilusão monetária altera a taxa natural de desemprego. Incorreto. A taxa natural de desemprego é alterada por elementos do lado da oferta e não pelos elementos da demanda. O que a ilusão monetária pode implicar é uma taxa de desemprego *efetiva* ser *temporariamente* menor que a natural. Ao final deste parágrafo dá a entender que você fez essa distinção. A confusão pode estar associada a redução do desemprego voluntário em função da ilusão monetária. Uma forma de verificar que isso não implica redução da taxa natural é que a ilusão monetária faz com que os agentes não consigam maximizar sua função objetivo e, portanto, não é compatível com a racionalidade. Desse modo, tal redução da taxa de desemprego efetiva para aquém da natural não é sustentável. Adiante, pontua corretamente a hipótese aceleracionista. No entanto, seria necessária explicar o porquê de variações no estoque de moeda causarem inflação. Para isso, é preciso descrever a TQM. Em seguida, é corretamente abordada a questão da defasagem da política monetária. No entanto, não é descrito o regime de metas monetárias (objetivo da resenha).
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
