--- a/Materias/2S2020/PED_CE342/Turma_C/172577.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/172577.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Em seu parágrafo inicial, corretamente coloca o regime de metas enquanto uma das formas de condução da política monetária mais utilizada atualmente. No entanto, não está correto a atribuição que fez ao monetarismo. Adiante, pontua corretamente que inflação é entendida enquanto um fenômeno monetário e que só pode ser controlada se a oferta crescer junto a demanda. No entanto, não especificou qual oferta se referia (bens e serviços? estoque de moeda?). Em seguida, descreveu corretamente taxa de desemprego natural e ilusão monetária e as associou às expectativas adaptativas e à inflação-surpresa. Adiante, pontuou que a moeda é neutra no longo prazo. Esta correto. No entanto, seria necessário lançar mão da TQM para chegar nessa conclusão. Apenas para ilustrar a importância da TQM: como que variações no estoque de moeda causam inflação? Em seguida, destacou a oposição à discricionariedade de política monetária, mas é pouco preciso ao descrever a regra monetária (qual agregado econômico? Consumo das famílias, por exemplo, é um agregado econômico). Adiante conclui especificando melhor esse ponto. Por fim, cabe a menção de que a TQM mal foi discutida em sua resenha.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
