--- a/Materias/2S2020/PED_CE342/Turma_C/197474.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/197474.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Corretamente apresenta o regime de regras monetárias enquanto proposição de política econômica mais importante do monetarismo. Também identifica dois conceitos centrais: taxa de desemprego natural e expectativas adaptativas. Adiante, é associada a neutralidade da moeda à formação de expectativas. Impreciso. A moeda é neutra tanto pela existência da taxa natural de desemprego quanto pela formação de expectativas adaptativas, mas principalmente pela demanda estável por moeda resultante da TQM. Adiante, retoma a discussão da taxa natural de desemprego. Apesar de correta, tal discussão não esta bem colocada na resenha. Poderia ter articulado melhor os conceitos. Adiante é tratada a flexibilidade dos preços enquanto determinante da convergência da taxa de desemprego corrente à natural. Em seguida, são apresentadas as diferentes versões da Curva de Phillips. É argumentado que a inclusão das expectativas se dá pelo comportamento dos agentes de anteciparem a taxa de inflação. Parcialmente correto. Mais precisamente, tal adaptação se dá pela suposição (implícita) de que os agentes seriam irracionais caso tal adição não fosse feita. Adiante, é descrito o conceito de ilusão monetária. No entanto, não há menção de que tal efeito é temporário e, por consequência, o trade-off entre inflação e desemprego também é temporário. Adiante, são pontuados corretamente outros argumentos a favor da não discricionariedade da política monetária. Em seguida, contrapõe-se o monetarismo ao keynesianismo ortodoxo. Logo em seguida, é apresentada a TQM em que é evidenciada a relação entre estoque monetário e nível de preços. Vale pontuar que dada a importância dessa relação, sugere-se que tal discussão fosse antecipada para indicar as causas da inflação e articular os conceitos apresentados anteriormente. Por fim, é corretamente pontuado que a retomada da TQM implica em uma nova teoria na demanda por moeda. A título de encerramento, não é destacado (tendo e vista esta discussão da TQM) como deve ser a atuação da política monetária.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
