--- a/Materias/2S2020/PED_CE342/Turma_C/197724.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/197724.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 No início da resenha são apresentados alguns dos conceitos da escola monetarista. No entanto, para que seja possível afirmar que a inflação é um fenômeno monetário e que a moeda é neutra se faz necessário lançar mão da TQM. No parágrafo seguinte descreve corretamente o conceito de taxa natural de desemprego, mas a explicação do porquê essa é a taxa para qual a economia convergiria esta pouco clara. Além disso, tal resultado ocorre mesmo na presença de distúrbios monetários. Basta que eles não sejam persistentes (moeda continua sendo neutra no longo prazo). Adiante, incorre em algumas imprecisões ao descrever a curva de Phillips aceleracionistas. Primeiramente, esta curva não "prevê" uma expansão do estoque monetário e subsequente redução da taxa de desemprego para aquém da natural. Mais precisamente, é necessário uma expansão monetária contínua para que a taxa de desemprego permaneça abaixo da natural. Em segundo lugar, esta versão da curva de Phillips implica negação do trade-off estável entre inflação e desemprego no longo prazo. Em seguida, quanto pontua a ilusão monetária, não esta claro se esta é causa ou consequência da inflação (sob expectativas adaptativas). No parágrafo seguinte é abordado corretamente o debate sobre as defasagens da política econômica. Em seguida, não ficou claro o que quis dizer com "auxiliando a moeda a se manter estável". Logo após, indica que é importante estabelecer políticas monetárias para que a economia permanece estável, mas não menciona quais. A discussão seguinte em que é destacada as proposições Keynesianas não está bem posicionada na resenha. A menção no parágrafo seguinte a crise de 29 deixou seu texto menos fluido e claro.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
