--- a/Materias/2S2020/PED_CE342/Turma_C/216397.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/216397.org
@@ -31,7 +31,23 @@
   :CLAREZA:  Atingido satisfatoriamente
   :NOTA:     Atingindo minimamente
   :END:
-
+  
 ** Comentários individuais 
 
 Foi pontuada a importância da retomada da TQM para o monetarismo. Adiante é destacada que foi incorporada enquanto uma teoria da demanda por moeda. Poderia apenas ter destacado suas hipóteses e implicação (estabilidade da demanda por moeda). No parágrafo seguinte, menciona a Curva de Phillips mas não descreve suas implicações e não a associa a ilusão monetária ou a neutralidade da moeda. Ao fim, retoma o legado monetarista e o faz sem mencionar a principal proposição de política monetária (adoção de regras monetárias).
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingindo minimamente
+  :ARGUMENTO: Atingindo minimamente
+  :CONCEITOS: Atingindo minimamente
+  :DESENVOLVIMENTO: Atingindo minimamente
+  :CONCLUSAO: Atingindo minimamente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
