--- a/Materias/2S2020/PED_CE342/Turma_C/221896.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/221896.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Em seu parágrafo de abertura, destaca corretamente a principal proposição de política econômica do monetarismo. Em seguida, pontua corretamente as principais hipóteses desta escola. Adiante, define a taxa de desemprego correta e rigorosamente. No parágrafo seguinte, pontua a curva de Phillips aceleracionista, mas não descreve suas implicações. Também descreve corretamente os efeitos da inflação-surpresa e ilusão monetária. No entanto, para chegar a conclusão de que variações no estoque de moeda implica inflação, seria necessário lançar mão da TQM e suas hipóteses/implicações. Adiante, descreve a hipótese aceleracionista e a contraindicação da discricionaridade da política monetária. Destaca a recomendação de regras monetárias, mas poderia ser mais preciso na colocação de qual "agregado monetário" deve-se ancorar a política monetária. Em seguida, pontua a importância da TQM, mas pouco se aprofunda nas hipóteses e implicações, dentre elas, estabilidade na demanda por moeda.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
