--- a/Materias/2S2020/PED_CE342/Turma_C/230645.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/230645.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Em seu parágrafo de abertura, corretamente pontuou a principal implicação do monetarismo e do regime de metas monetárias. Adiante, pontua a taxa de desemprego natural (sem a definir) e associa a formação das expectativas à ilusão monetária. Ao descrever tal conceito, afirma que os agentes não percebem variações reais nos salários. Mais precisamente, os agentes avaliam variações nominal tal como se fossem reais. Logo, acham que estão avaliando corretamente as mudanças reais dos salários sendo que, em função da formação das expectativas, apenas estão detectando variações nominais. Adiante, pontua que tal ilusão monetária tem efeitos temporários, mas a inflação aumenta continuamente. Ambas as conclusões não podem ser verdadeiras ao mesmo tempo de acordo com a teoria monetarista. Em seguida, apresenta a hipótese aceleracionista de forma bastante rápida. No parágrafo seguinte, pontua corretamente a questão das defasagens temporais e a recomendação de regras monetárias. No entanto, para se chegar a tal conclusão seria necessário passar pela TQM e suas hipóteses/implicações.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
