--- a/Materias/2S2020/PED_CE342/Turma_C/232568.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/232568.org
@@ -37,3 +37,18 @@
 Em seus parágrafos de abertura, corretamente pontua o monetarismo histórica e teoricamente enquanto contraponto ao keynesianismo ortodoxo. Adiante, destaca a centralidade da TQM para tais conclusões e a contrasta com a interpretação da escola precedente. Em seguida, pontua as implicações da TQM enquanto teoria da demanda por moeda, qual seja, instabilidade decorre da variações no estoque do ativo (moeda) e não em sua demanda. Também associa a estabilidade dos preços ao crescimento equilibrado entre estoque de moeda e nível de atividade. Adiante, pontua a negação do trade-off estável de longo prazo da curva de Phillips convencional. Em seguida, apresenta o argumento que taxas de desemprego persistentemente abaixo da natural necessitam expansões contínuas da base monetária. No entanto, pouco mencionou os efeitos sobre a inflação e o mesmo vale para a ilusão monetária.
 
 Por fim, vale destacar que existem muitos Miltons, mas M. Friedman apenas um. Evite citar autores pelo primeiro nome. Além de ser pouco comum na academia é pouco preciso. 
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
