--- a/Materias/2S2020/PED_CE342/Turma_C/233566.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/233566.org
@@ -37,3 +37,19 @@
 Inicia a resenha pontuando o keynesianismo (ortodoxo) enquanto escola antecedente ao monetarismo. Corretamente destaca a TQM na escola monetarista enquanto constructo teórico central. Em seguida, indica os temas a serem tratados no capítulo a ser resenhado. Logo depois é pontuado que a TQM perdeu relevância teórica na medida que o Keynesianismo ortodoxo ganha destaca. No entanto, é afirmado que a moeda deixa de ser relevante em algumas situação. Vale destacar que este é o caso para o keynesianismo ortodoxo. Corretamente destaca que a TQM é reintroduzida enquanto uma teoria da demanda por moeda. Poderia apenas ter enfatizado as suas implicações (esta demanda por moeda é estável). Por mais que a TQM seja central para o monetarismo, tal discussão ocupou boa parte da resenha. Senti falta de uma discussão sobre taxa desemprego natural, inflação-surpresa, ilusão monetária, Curva de Phillips e, principalmente, a discussão sobre o regime de metas monetárias.
 
 De modo geral, sua resenha está razoável. Sugiro apenas que tente se ater ao tema proposto. Corretamente foi feitas contraposições entre o keynesianismo ortodoxo e o monetarismo. Tais comparações, apesar de corretas e relevantes, tomaram espaço de sua resenha que poderia ter utilizado para discutir outros pontos. Lembre-se que o limite de página imposto também dita o grau de detalhe que poderá entrar em cada tema. De todo modo, fica aqui registrado que as comparações entre as escolas foram feitas de forma bem articuladas. 
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
