--- a/Materias/2S2020/PED_CE342/Turma_C/234311.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/234311.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Contrapôs o monetarismo e o keynesianismo ortodoxos e especificou as diferenças em relação a TQM. No parágrafo seguinte é afirmado que a importância da moeda é subestimada pelos keynesianos. Vale destacar que isso é válido para o keynesianismo ortodoxo. O parágrafo que pontua a elaboração da demanda por moeda esta um pouco confuso, mas entendi o que quis dizer. Um ponto importante é que a oferta por moeda é exógena para o monetarismo. Portanto, os ativos não interferem na quantidade de moeda disponível. Mais uma vez é colocado que os keynesianos subestimavam a importância dos saldos monetários. O comentário que fiz a respeito disso continua válido aqui. Adiante, indica corretamente que os monetaristas negavam a relação estável entre inflação e desemprego no longo prazo. No parágrafo anterior ao que descreve a hipótese aceleracionista, parece ter confundido a curva de Phillips de longo prazo com os efeitos da expansão monetária a longo prazo. Essa discussão não ficou muito clara em sua resenha. No parágrafo seguinte descreve a hipótese aceleracionista. Em conjunto, esses parágrafos que mencionei entram em conflito. Há uma certa contradição na construção dos argumentos. Adiante descreve a proposição das regras monetárias sem deixar claro qual variável deve seguir esta regra (especificamente onde diz "desaceleração da taxa de expansão", expansão de que?). No parágrafo seguinte, define corretamente a taxa de desemprego natural. No entanto, a posição deste parágrafo deixa o texto pouco fluido. De todo modo, apontou corretamente outras proposições de política econômica do monetarismo.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
