--- a/Materias/2S2020/PED_CE342/Turma_C/235042.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/235042.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 205151 - Raphaela Prado Francisco
+#+TITLE: 235042 - Gabriel Silva Gonçalves
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 205151
-#+PROPERTY: NOME "Raphaela Prado Francisco"
+#+PROPERTY: RA 235042
+#+PROPERTY: NOME "Gabriel Silva Gonçalves"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -23,30 +23,31 @@
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:
-  :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido satisfatoriamente
-  :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido totalmente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingindo minimamente
+  :OBJETIVO:
+  :ARGUMENTO:
+  :CONCEITOS:
+  :DESENVOLVIMENTO:
+  :CONCLUSAO:
+  :CLAREZA:
+  :NOTA:
   :END:
 
 ** Comentários individuais 
 
-Entregue digitada.
+   Nao foi entregue no prazo.
+
 * Resenha 2: Novos Clássicos                                        :private:
   :PROPERTIES:
-  :TAREFA:   Resenha 2
-  :OBJETIVO: Atingido parcialmente
-  :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :TAREFA:
+  :OBJETIVO:
+  :ARGUMENTO:
+  :CONCEITOS:
+  :DESENVOLVIMENTO:
+  :CONCLUSAO:
+  :CLAREZA:
+  :NOTA:
   :END:
 
 ** Comentários individuais
 
-   Foram includos no documento enviado.
+   Foram includos no documento enviado. Foram sinalizados 5 trechos como plagio.
