--- a/Materias/2S2020/PED_CE342/Turma_C/237534.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/237534.org
@@ -36,3 +36,18 @@
 
 Sua resenha não possui introdução. Inicia apresentando a taxa de desemprego natural. Adiante a problematiza pela ausência da taxa de desemprego involuntário. Adiante, é dito que a taxa de desemprego natural seria um estabilizador econômico. Não é muito preciso. Essa taxa seria um ponto atrator. O que garantiria que a economia convergisse para lá é a ausência de instabilidades. Eis o porquê da TQM (ainda não mencionada) ser relevante. Em seguida, é corretamente pontuado que a taxa de desemprego natural não é imutável. Poderia apenas ter sido mais claro sobre o que pode fazer com que ela se altere (que tipo de políticas econômicas e "ações humanas"?). Adiante, faz uma reconstituição histórica das versões da curva de Phillips, mas não deixa claro que há uma relação *negativa e estável* entre inflação e desemprego. Na curva de Phillips aceleracionista, tal relação estável é negada no longo prazo. Em seguida é descrita a ilusão monetária. Em seguida, é dito que tal conclusão tem como base o embate entre discricionariedade e ativismo da política monetária. Mais precisamente, é o inverso. Tal conclusão recomenda as regras monetárias em detrimento do ativismo. Ao fim, é destacada a retomada da TQM, mas não há menção de que é reinterpretada enquanto uma teoria da demanda por moeda cujas hipóteses implicam estabilidade.
 Vale destacar que não é discutido a proposição de regras monetárias em função dos conceitos anteriormente discutidos na resenha.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingindo minimamente
+  :ARGUMENTO: Atingindo minimamente
+  :CONCEITOS: Atingindo minimamente
+  :DESENVOLVIMENTO: Atingindo minimamente
+  :CONCLUSAO: Atingindo minimamente
+  :CLAREZA:  Atingindo minimamente
+  :NOTA:     Atingindo minimamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
