--- a/Materias/2S2020/PED_CE342/Turma_C/257876.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257876.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Inicia a resenha com uma excelente contextualização histórica dos estudos da moeda e estabeleceu uma ponte entre a TQM clássica e à de Friedman. Adiante, descreve corretamente os determinantes da inflação a partir da TQM. Também associa corretamente a TQM ao fundamento teórico das regras monetárias, situando tal constructo teórico no centro. Adiante é feito uma contextualização das diferentes etapas na construção da curva de Phillips. No mesmo parágrafo é mencionada a ilusão monetária, mas não é definida (mas dá a entender que compreendeu este conceito pela explicação). Adiante, contextualiza a curva de Phillips aceleracionista em função da estagflação. Em seguida, destaca corretamente que o trade-off entre inflação e desemprego só é válido no curto prazo. Ao fim, retoma a proposição de regras monetárias mas não explicita como os agregados monetários devem se comportar. No entanto, isso já havia ficado claro na introdução. Excelente resenha!
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
