--- a/Materias/2S2020/PED_CE342/Turma_C/213549.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/213549.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Corretamente aponta que a regra monetária é a principal proposição do monetarismo, mas isso não implica na definição de metas de inflação, mas sim regras de expansão da base monetária. Adiante, corretamente coloca que a expansão (desregulada) da base monetária implica inflação. No entanto, cabe algumas correções. Este é um resultado e não um pressuposto do modelo. Além disso, expansão desregulada é um pouco impreciso. Mais exatamente, se a oferta de moeda crescer a uma taxa diferente da economia, haveria inflação ou deflação. Adiante, é pontuado que a moeda pode ser neutra se não houver variações no estoque de moeda. Incorreto. A moeda é neutra no longo prazo mesmo se o estoque de moeda variar no curto prazo (e não persistentemente). Adiante, afirma que partindo dos conceitos de taxa natural de desemprego e das diferentes versões da curva de Phillips é possível chegar à conclusão de que a moeda é neutra. Isso esta correto, mas não é apresentado o porquê desse resultado em sua resenha (os conceitos não estão sendo utilizados, apenas apresentados). Sendo assim, não é possível concluir (de seu texto) o porquê se deve adotar regras monetárias. Além disso, seria necessário apresentar as hipóteses e implicações relacionadas a TQM. A descrição da ilusão monetária também esta incompleta. Em seguida, quanto apresenta a TQM, incorre em algumas incompreensões. Tal como Friedman a resgata, passa a ser uma teoria da demanda por moeda. Como resultados das hipóteses associadas a ela, a demanda por moeda é estável. Além disso, o produto ser formado pelo uso dos fatores de produção não é exclusivo nem fundamental a TQM. Ao fim, quando elencas as recomendações de política econômica, não há nenhuma menção da regra monetária: estoque de moeda deve crescer a uma mesma taxa que a economia.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
